--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "reflect-metadata": "^0.1.13",
+    "tsyringe": "^4.4.0"
   }
 }
