--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "weather-app",
   "version": "1.0.0",
   "description": "Weather API",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
-    "test": "jest --runInBand"
+    "test": "jest",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/venkatramachandran/weather-app#readme",
   "devDependencies": {
+    "@types/bunyan": "^1.8.6",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.32",
@@ -27,6 +31,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "bunyan": "^1.8.15",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
