--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "emitDecoratorMetadata": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": ["**/*.test.ts"]
 }
