--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,8 +1,8 @@
 pull_request_rules:
   - name: Automatic merge on approval
     conditions:
-      - author=dependabot-preview[bot]
-      - status-success=Linting - Check Style
+      - author=dependabot[bot]
+      - status-success=Build, Test and Release
     actions:
       merge:
         method: merge
